Fix align problems and improve Hamburguer Menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,42 +7,46 @@ body {
     background-position: center;
     background-attachment: fixed;
     min-height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .main-header {
     position: fixed;
-    top: 5;
-    left: 2;
-    right: 2;
     width: 100%;
     background: rgba(255, 255, 255, 0.35);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 5%;
-    max-width: 1200px;
-    margin: 0 auto;
+    padding: 1% 0%;
+    margin: 0;
 }
 
 .logo {
     font-size: 1.5rem;
     font-weight: 600;
+    padding: 0.5px;
     color: #2c5aa0;
     transition: all 0.3s ease;
     text-decoration: none;
+}
+
+.nav-side {
+    flex-basis: 200px;
 }
 
 .logo:hover {
     color: #4a90e2;
 }
 
-.menu-hamburguer {
+.menu-hamburguer,
+.nav-mobile,
+.language-switcher-mobile {
     display: none;
 }
 
@@ -62,29 +66,21 @@ body {
     border-radius: 2px;
 }
 
-.nav-menu {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15rem;
-}
-
 .nav-links {
     display: flex;
     align-items: center;
+    justify-content: center;
     list-style: none;
-    gap: 1rem;
+    gap: 0.5rem;
     margin: 0;
+    flex: 1;
 }
 
 .nav-link {
     color: #333;
     text-decoration: none;
     font-weight: 500;
-    border-radius: 5px;
     transition: all 0.3s ease;
-    position: relative;
 }
 
 .nav-link:hover {
@@ -98,6 +94,8 @@ body {
 .language-switcher {
     display: flex;
     align-items: center;
+    justify-content: end;
+    padding-right: 3px;
     gap: 0.4rem;
     font-size: 0.75rem;
 }
@@ -112,10 +110,6 @@ body {
     color: blue;
 }
 
-.lang:active {
-    color: #4a90e2;
-}
-
 .lang-divider {
     color: black;
     opacity: 0.3;
@@ -126,38 +120,45 @@ body {
 
 /* Tablet */
 @media screen and (max-width: 768px) {
-    .navbar {
-        padding: 1rem 3%;
-    }
-
-    .nav-menu {
+    .nav-mobile {
+        display: flex;
+        flex-direction: column;
         position: fixed;
         top: 100%;
-        left: 0;
         width: 100%;
-        background: rgba(255, 255, 255, 0.85);
-        backdrop-filter: blur(10px);
-        flex-direction: column;
-        padding: 2rem;
-        box-shadow: rgba(0, 0, 0, 0.8);
-        transform: translateY(-100%);
-        transition: all 0.3s ease;
+        background: rgba(255, 255, 255, 0.45);
+        backdrop-filter: blur(5px);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         opacity: 0;
         visibility: hidden;
+        pointer-events: none;
+        transform: translateY(-100%);
+        transition: all 0.3s ease;
+        z-index: 1000;
     }
 
+    .nav-links,
     .language-switcher {
-        order: 2;
-        margin-top: auto;
-        padding: 1rem;
-        border-top: 1px solid rgba(44, 90, 160, 0.1);
+        display: none;
     }
 
-    .nav-links {
+    .nav-links-mobile {
+        display: flex;
+        padding: 0;
         flex-direction: column;
-        width: 100%;
-        gap: 1rem;
-        margin-bottom: 2rem;
+        align-items: center;
+        list-style: none;
+        gap: 0.7rem;
+    }
+
+    .language-switcher-mobile {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 0.5rem;
+        padding-left: 2.5rem;
+        gap: 1.5rem;
     }
 
     .nav-link {
@@ -169,13 +170,17 @@ body {
 
     .hamburguer {
         display: flex;
-        z-index: 1001;
+        flex-direction: column;
+        cursor: pointer;
+        margin-left: auto;
+        z-index: 1100;
     }
 
-    .menu-hamburguer:checked ~ .nav-menu {
+    .menu-hamburguer:checked ~ .nav-mobile {
         transform: translateY(0);
         opacity: 1;
         visibility: visible;
+        pointer-events: auto;
     }
 
     .menu-hamburguer:checked ~ .hamburguer .bar:nth-child(1) {
